# multi-modal_colpali

./: .env_sample  .gitignore  .gitingore  00_run_docker_containers.sh  00_run_docker_containers_other_models.sh  00_run_docker_old_models.sh  01_create_context_qdrant.ipynb  01_create_context_qdrant.py  02_experiment01.ipynb  02_experiment01.py  02_testing_models.ipynb  02a_stat_test.R  03_experiment01_run.py  04_experiment01_eval.ipynb  04_experiment01_eval.py  05_experiment02.ipynb  05_experiment02.py  06_experiment02_eval.ipynb  06_experiment02_eval.py  06_experimnet02_eval.ipynb  README.md  benchmark_placeholder.csv  eval_v1.ipynb  functions.py  main.py  prompts_used.pkl  pyproject.toml  second_v2.ipynb  test_models.py
src/: data_processing.py  evaluation.py  retrieval.py  utils.py
